# 30-Dias-de-Flask-Blog

./: .gitignore  pyproject.toml  requirements.txt  settings.toml
blog/: app.py
blog/blueprints/models/: __init__.py  base_model.py
blog/blueprints/views/: __init__.py  index.py
blog/ext/: authentication.py  configuration.py  database.py  migration.py
blog/utils/: singleton.py
tests/: test_blog.py
