[tool.poetry]
name = "Blog"
version = "0.1.0"
description = ""
authors = ["Vinicius Abade <vinicius@kenzie.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
dynaconf = "^3.1.2"
Flask-SQLAlchemy = "^2.4.4"
Flask-Migrate = "^2.6.0"
Flask-Login = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
